--- a/src/components/Download.css
+++ b/src/components/Download.css
@@ -11,7 +11,7 @@
     flex-direction: column; /* Располагаем кнопки вертикально */
 }
 
-.download-button, .feedback-button {
+.download-button {
     width: 200px; /* Фиксированная ширина кнопок */
     padding: 10px; /* Убираем горизонтальный отступ */
     font-size: 16px; /* Размер шрифта */
@@ -25,9 +25,36 @@
     margin-bottom: 10px; /* Отступ между кнопками */
 }
 
-.download-button:hover, .feedback-button:hover {
+.download-button:hover {
     background-color: #0056b3; /* Темнее при наведении */
     cursor: pointer;
+}
+
+
+
+/* Стиль для кнопки отправки */
+.submit-button {
+    width: 100%; /* Полная ширина кнопки */
+    padding: 12px 20px; /* Внутренние отступы */
+    background-color: #4682bf; /* Синий фон */
+    color: white; /* Белый текст */
+    border: none; /* Убираем границу */
+    border-radius: 5px; /* Закругленные углы */
+    font-size: 16px; /* Размер шрифта */
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease; /* Плавные переходы */
+    margin-top: 10px;
+}
+
+.submit-button:hover {
+    background-color: #0056b3; /* Темнее при наведении */
+    transform: translateY(-3px); /* Легкое поднятие при наведении */
+}
+
+.submit-button:focus {
+    outline: none; /* Убираем стандартный фокус */
+    box-shadow: 0 0 0 3px rgba(70, 130, 191, 0.5); /* Добавляем подсветку при фокусе */
 }
 
 /* Отменяем медиазапросы для кнопок, чтобы они всегда имели фиксированную ширину */
