--- a/src/components/TopBar.css
+++ b/src/components/TopBar.css
@@ -1,8 +1,11 @@
 .top-bar {
     width: 100%;
-    background: rgba(72, 130, 191, 0.7); /* Полупрозрачный фон с цветом */
+    background: linear-gradient(
+      rgba(0, 56, 127, 0.6), /* Начало градиента с полупрозрачным цветом */
+      rgba(70, 130, 180, 0.6)  /* Конец градиента с другим полупрозрачным цветом */
+    );
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    padding: 2%;
+    padding: 1.3%;
     margin-bottom: 10px;
     max-width: 100%;
     display: flex;
@@ -70,19 +73,18 @@
     .nav-menu {
         justify-content: center; /* Центрируем меню на мобильных */
         width: 100%; /* Задаем ширину 100% для меню */
-        margin-top: 10px; /* Добавляем пространство между панелью и меню */
+        margin-top: 5px; /* Добавляем пространство между панелью и меню */
     }
 
-    .nav-menu ul {
+    .list {
         flex-direction: column; /* Выстраиваем элементы в колонку для мобильных */
         width: 100%; /* Устанавливаем ширину на 100% */
         align-items: center; /* Выровнять элементы списка */
     }
 
-    .nav-menu li {
-        margin: 10px 0; /* Отступы сверху и снизу для каждого элемента */
-    }
-
+    .list li {
+      margin: 10px 0; /* Отступы сверху и снизу для каждого элемента */
+  }
     .nav-menu .modal-button {
         font-size: 0.9rem; /* Уменьшаем размер шрифта для мобильных */
         padding: 8px 12px; /* Уменьшаем отступы */
